tomcat实现原理分析规划

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>request-handle</module>
       <module>webapp-test</module>
+        <module>design-philosophy</module>
     </modules>
 
     <name>tomcat-analysis</name>
