--- a/design-philosophy/pom.xml
+++ b/design-philosophy/pom.xml
@@ -4,12 +4,60 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>tomcat-analysis</artifactId>
-        <groupId>top,kwseeker.tomcat</groupId>
+        <groupId>top.kwseeker.tomcat</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>design-philosophy</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+    </dependencies>
 
+    <build>
+        <!--&lt;!&ndash;默认源代码目录&ndash;&gt;-->
+        <!--<sourceDirectory>src/main/java</sourceDirectory>-->
+        <!--&lt;!&ndash;默认测试源代码目录&ndash;&gt;-->
+        <!--<testSourceDirectory>src/test/java</testSourceDirectory>-->
+        <!--&lt;!&ndash;默认资源目录&ndash;&gt;-->
+        <!--<resources>-->
+        <!--    <resource>-->
+        <!--        <directory>src/main/resources</directory>-->
+        <!--    </resource>-->
+        <!--</resources>-->
+        <!--&lt;!&ndash;默认测试资源目录&ndash;&gt;-->
+        <!--<testResources>-->
+        <!--    <testResource>-->
+        <!--        <directory>src/test/resources</directory>-->
+        <!--    </testResource>-->
+        <!--</testResources>-->
+        <plugins>
+            <!-- 指定多个源代码目录、多个资源文件目录 -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>src/java/main</source>
+                                <source>webroot/servlet</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
