--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>top,kwseeker.tomcat</groupId>
+  <groupId>top.kwseeker.tomcat</groupId>
   <artifactId>tomcat-analysis</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -13,6 +13,7 @@
       <module>webapp-test</module>
       <module>design-philosophy</module>
       <module>01-socket</module>
+      <module>my-servlet</module>
     </modules>
 
     <name>tomcat-analysis</name>
